src- Version 4.19/objects/Payment_Allocation__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Holds the Payment Allocation details which essentially splits the Payment among invoices.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>The Invoice against which this Payment is made.</description>
        <inlineHelpText>The Invoice against which this Payment is made.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Payment Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>